# event-reminder-backend

./: .gitignore  docker-compose.yml  pyproject.toml  railpack.json  requirements.txt
app/: config.py  crud.py  export_openapi_yaml.py  main.py  models.py  schemas.py
app/auth/: dependencies.py  security.py
app/services/: scheduler.py
app/tests/: conftest.py  model_factories.py  test_api.py
docs/architecture/: system_overview.md
event-reminder-backend/: README.md
event-reminder-backend/app/: crud.py  schemas.py
event-reminder-backend/app/auth/: schemas.py
event-reminder-backend/app/services/: notifier.py
event-reminder-backend/docs/prd/: 00_vision.md
event-reminder-backend/event_reminder.egg-info/: PKG-INFO  entry_points.txt
event-reminder-backend/tests/: conftest.py  test_api.py  test_notifier.py  test_scheduler.py
event_reminder.egg-info/: SOURCES.txt  requires.txt
tests/: test_api.py
